name:                nixfmt
version:             1.0.0
synopsis:            Auto-format Nix code
description:         Please see README.md
homepage:            https://github.com/Gabriel439/nixfmt#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
copyright:           2016 Gabriel Gonzalez
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable nixfmt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-tools:         alex, happy
  build-depends:       base >= 4.7 && < 5
                     , Earley
                     , parsec
                     , pretty
                     , text
  ghc-options:         -Wall
